<resources>
    <string name="app_name">MovieApp</string>

    <string name="title_activity_detail">MovieDetail</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_show_favourite">Favourites</string>
    <string name="action_sort_popular">Sort by Popularity</string>
    <string name="action_sort_rating">Sort by Rating</string>

    <string name="pref_sorting_label">Default Sorting Type</string>
    <string name="pref_sorting_key" translatable="false">sorting_type</string>

    <string name="pref_sorting_popular" translatable="false">popular</string>
    <string name="pref_sorting_rated" translatable="false">top_rated</string>

    <string name="pref_sorting_popular_label" translatable="false">Most Popular</string>
    <string name="pref_sorting_rated_label" translatable="false">Highest Rated</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_trailers">Trailers:</string>
    <string name="title_reviews">Reviews:</string>

    <string name="poster_description">movie poster</string>
    <string name="trailer_image_description">trailer icon</string>
    <string name="ratingbar_description">movie rating bar</string>
    <string name="favourite_button_description">add to favourite button</string>
    <string name="trailer_thumbnail_description">trailer thumbnail from youtube</string>
    <string name="movie_background_description">movie background description</string>

</resources>
