<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:visibility="gone">
        </ProgressBar>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/paddingSmall"
                    android:layout_marginLeft="@dimen/paddingSmall"
                    android:layout_marginRight="@dimen/paddingSmall"
                    android:layout_marginTop="@dimen/paddingSmall"
                    android:weightSum="@integer/detailSum">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/movie_poster"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:layout_weight="@integer/posterWeight"
                        tools:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/poster_description"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/paddingLarge"
                        android:layout_weight="@integer/dataWeight">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_date"
                            android:maxLines="@integer/maxLines"
                            android:textSize="@dimen/textLarge"
                            android:textColor="@color/colorText"
                            android:layout_marginTop="@dimen/paddingSmall"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_rate"
                            android:layout_marginTop="@dimen/paddingMedium"
                            android:layout_marginBottom="@dimen/paddingSmall"
                            android:maxLines="@integer/maxLines"
                            android:textSize="@dimen/textSmall"
                            android:textColor="@color/colorText"/>

                        <RatingBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="@integer/maxStars"
                            android:id="@+id/ratingBar"
                            android:isIndicator="true"
                            style="?android:attr/ratingBarStyleSmall"
                            android:contentDescription="@string/ratingbar_description"/>

                        <ImageButton
                            android:layout_width="@dimen/favouriteIconDimen"
                            android:layout_height="@dimen/favouriteIconDimen"
                            android:background="@drawable/favourite_selector"
                            android:layout_marginTop="@dimen/paddingMedium"
                            android:id="@+id/favourite"
                            android:contentDescription="@string/favourite_button_description"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_overview"
                        android:paddingBottom="@dimen/paddingSmall"
                        android:paddingLeft="@dimen/paddingSmall"
                        android:paddingRight="@dimen/paddingSmall"
                        android:textSize="@dimen/textMedium"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorText"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".5"
                    android:background="@android:color/black"
                    android:layout_marginTop="@dimen/paddingSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_trailers"
                        android:textSize="@dimen/textMedium"
                        android:layout_marginLeft="@dimen/paddingSmall"
                        android:layout_marginTop="@dimen/paddingSmall"
                        android:layout_marginBottom="@dimen/paddingSmall"
                        android:textColor="@color/colorTitle"
                        android:textStyle="bold"/>

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_trailers" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".5"
                    android:background="@android:color/black"
                    android:layout_marginTop="@dimen/paddingSmall" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_reviews"
                        android:textSize="@dimen/textMedium"
                        android:layout_marginLeft="@dimen/paddingSmall"
                        android:layout_marginTop="@dimen/paddingSmall"
                        android:layout_marginBottom="@dimen/paddingSmall"
                        android:textColor="@color/colorTitle"
                        android:textStyle="bold"/>

                    <com.example.vika.movieapp.Utilities.ExpandableHeightListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/movie_reviews"
                        android:cacheColorHint="#00000000"
                        android:fadingEdge="none"
                        android:focusable="false"
                        android:scrollbars="none"/>


                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </RelativeLayout>
</layout>
